compilateurDeca/src/test/deca/syntax/invalid/sans_objet/string.deca

//Description
//
// Teste une chaîne de caractères non fermée dans println
// Historique:
//    cree le 08/01/2026
{
    println("abc";
}